--- a/style.css
+++ b/style.css
@@ -1,17 +1,55 @@
-.box {
-    border: 2px solid black;
-    background-color: white;
-    width: 50px;
-    height: 50px;
+.header {
+    font-size: 4rem;
+    padding: 32px 0px;
+}
+
+.app {
+    display: flex;
+    justify-content: center;
+}
+
+.app__option {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.app__option__icon {
+    font-size: 5rem;
+}
+
+.app__option__btn {
+    border-style: none;
+    background-color: black;
+    color: white;
+    width: 192px;
+    height: 64px;
+    font-family: monospace;
+    font-size: 1rem;
+    transition: 0.4s;
+}
+
+.app__option__btn:hover {
+    border: 1px solid black;
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+
+.grid {
+    width: 640px; /*640 */
+    height: 640px;
     display: inline-block;
-    
-}
-
-.box:hover {
-    background-color: aliceblue;
-}
-
-* {
-    margin: 0px 0px;
     line-height: 0px;
+}
+
+.grid__box {
+    background-color: #ffffff;
+    display: inline-block;
+}
+
+body {
+    background-color: #f5f5f5;
+    text-align: center;
+    font-family: monospace;
 }
